@@ -2814,10 +2814,37 @@ class Product extends CommonObject
 	}
 
 	/**
+	 *  Update product/service type
+	 *
+	 *  @param  User	$user    Utilisateur qui fait la modification
+	 *  @return	void
+	 *  TODO Replace this by a method update_field into common
+	 */
+	function update_type($user)
+	{
+		$sql = "UPDATE ".MAIN_DB_PREFIX."product";
+		$sql.= " SET fk_product_type = '".$this->type."'";
+		$sql.= " WHERE rowid = ".$this->id;
+
+		dol_syslog(get_class($this)."::update_type sql=".$sql);
+		$resql=$this->db->query($sql);
+		if ($resql)
+		{
+			return 1;
+		}
+		else
+		{
+			dol_print_error($this->db);
+			return -1;
+		}
+	}
+
+	/**
 	 *  Mise a jour du code barre
 	 *
 	 *  @param  User	$user    Utilisateur qui fait la modification
 	 *  @return	void
+	 *  TODO Replace this by a method update_field into common
 	 */
 	function update_barcode($user)
 	{
@@ -2843,6 +2870,7 @@ class Product extends CommonObject
 	 *
 	 *  @param  User	$user     Utilisateur qui fait la modification
 	 *  @return	void
+	 *  TODO Replace this by a method update_field into common
 	 */
 	function update_barcode_type($user)
 	{
@@ -2871,14 +2899,7 @@ class Product extends CommonObject
      */
 	function isproduct()
 	{
-		if ($this->type != 1)
-		{
-			return 1;
-		}
-		else
-		{
-			return 0;
-		}
+		return ($this->type != 1 ? true : false);
 	}
 
     /**
@@ -2888,14 +2909,7 @@ class Product extends CommonObject
      */
 	function isservice()
 	{
-		if ($this->type==1)
-		{
-			return 1;
-		}
-		else
-		{
-			return 0;
-		}
+		return ($this->type == 1 ? true : false);
 	}
 
     /**
